<?xml version="1.0"?>
<package>
  <name>learning_actionlib</name>
  <version>0.1.4</version>
  <description>The learning_actionlib package</description>
  <author>Melonee Wise</author>
  <maintainer email="iisaito@kinugarage.com">Isao Isaac Saito</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/actionlib/Tutorials</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>message_generation</run_depend>

  <export>
  </export>
</package>
