<?xml version="1.0"?>
<package>
  <name>actionlib_tutorials</name>
  <version>0.1.7</version>
  <description>The actionlib_tutorials package</description>
  <maintainer email="iisaito@kinugarage.com">Isao Isaac Saito</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/actionlib/Tutorials</url>
  <url type="repository">https://github.com/ros/common_tutorials</url>
  <url type="bugtracker">https://github.com/ros/common_tutorials/issues</url>

  <author email="melducky@gmail.com">Melonee Wise</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
