<package>
  <name>common_tutorials</name>
  <version>0.1.11</version>
  <description>Metapackage that contains common tutorials</description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/common_tutorials</url>
  <url type="repository">https://github.com/ros/common_tutorials</url>
  <url type="bugtracker">https://github.com/ros/common_tutorials/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>actionlib_tutorials</run_depend>
  <run_depend>nodelet_tutorial_math</run_depend>
  <run_depend>pluginlib_tutorials</run_depend>
  <run_depend>turtle_actionlib</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
