<package format="2">
  <name>smach_tutorials</name>
  <version>0.1.10</version>
  <description>
    This package contains numerous examples of how to use SMACH.
    See the examples directory.
  </description>
  <author>Jonathan Bohren</author>
  <maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>
  <maintainer email="iisaito@kinugarage.com">Isaac I. Y. Saito</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/smach_tutorials</url>
  <url type="repository">https://github.com/ros/common_tutorials</url>
  <url type="bugtracker">https://github.com/ros/common_tutorials/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <depend>actionlib_msgs</depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>common_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>ros_tutorials</exec_depend>
  <exec_depend>smach</exec_depend>
  <exec_depend>smach_ros</exec_depend>
  <exec_depend>turtlesim</exec_depend>

  <export />
</package>
